made the profile picture in friendslist a fixed height and made sure a message cannot overflow its borders

--- a/src/front-end/channel-chatter/style-chat-window.css
+++ b/src/front-end/channel-chatter/style-chat-window.css
@@ -80,6 +80,11 @@ body {
   border-bottom: 1px solid gainsboro;
   border-left: none;
 }
+.list-group-item .h5.mb-1 {
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 ::-webkit-scrollbar {
   width: 8px;
